# cmake-hello-world

./: .gitmodules  CMakeLists.txt  README.md  build.sh  zlog.conf
.github/: copilot-instructions.md
lib/lib_arm/: README.md
lib/lib_arm64/: README.md
lib/lib_x86/: README.md
open_src/: CMakeLists.txt
project/: CMakeLists.txt
project/helloworld/: CMakeLists.txt
project/helloworld/inc/: main.h
project/helloworld/src/: hello.c  main.c
